--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,16 @@ nav a:hover {
 
 
 /* ---- LEARN SECTION ---- */
+#learn {
+    display: flex;
+    flex-direction: row;
+}
+
+#learn div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 
