--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--brown);
+    color: var(--tan);
 }
 
 nav h2 {
@@ -150,7 +152,7 @@ nav a:hover {
 }
 
 #learn img {
-    width: 350px;
+    width: 450px;
     height: auto;
 }
 
