oh boy here we go

--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,12 @@ header {
     color: var(--tan);
 }
 
+#light-mode {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 nav h2 {
     display: none;
 }
