--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ table {
 
 
 /* ---- IMPORTS, BASICS, & VARIABLES ---- */
-@import url("");
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Merienda:wght@300..900&display=swap');
 
 :root {
     --brown: #624F41;
@@ -67,21 +67,24 @@ body {
     max-width: 100%;
     margin: auto;
     background-color: var(--tan);
+    font-family: 'Assistant', sans-serif;
 }
 
 h1 {
     font-weight: 600;
     font-size: 5rem;
+    font-family: "Merienda", cursive;
 }
 
 h2 {
     font-weight: 400;
     font-size: 3rem;
+    font-family: "Merienda", cursive;
 }
 
 p {
-    font-weight: 200;
-    font-size: 1.25rem;
+    font-weight: 400;
+    font-size: 1.5rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -100,6 +103,11 @@ header {
     align-items: center;
     background-color: var(--brown);
     color: var(--tan);
+    padding-top: 50px;
+}
+
+header h1 {
+    padding-bottom: 20px;
 }
 
 #light-mode {
@@ -144,6 +152,12 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    text-align: center;
+}
+
+#about p {
+    padding: 20px;
+    width: 80%;
 }
 
 
@@ -152,13 +166,12 @@ nav a:hover {
 #learn {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    padding: 20px;
+    justify-content: center;
     text-align: center;
 }
 
 #learn img {
-    width: 450px;
+    width: 400px;
     height: auto;
 }
 
@@ -166,23 +179,154 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 30px;
 }
 
 
 
 /* ---- GALLERY SECTION ---- */
+#gallery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 20px 0;
+}
 
 /* ---- JAVASCRIPT: SLIDESHOW ---- */
 
 
 
+
+
+
+
+
+
+
+/* Slideshow container */
+#slideshow {
+    max-width: 800px;
+    position: relative;
+    margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Number text (1/3 etc) */
+.slide-number {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ---- WEATHER SECTION ---- */
+#weather {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 20px 0;
+}
 
 /* ---- JAVASCRIPT: API ---- */
 
 
 
 /* ---- FAQ SECTION ---- */
+#faq {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 20px 0;
+}
 
 /* ---- JAVASCRIPT: ACCORDION ---- */
 
