--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,12 @@ nav a:hover {
     padding: 20px 0;
 }
 
+#gallery p {
+    padding: 20px;
+    width: 80%;
+    margin: auto;
+}
+
 /* ---- JAVASCRIPT: SLIDESHOW ---- */
 
 
@@ -206,9 +212,13 @@ nav a:hover {
 
 /* Slideshow container */
 #slideshow {
-    max-width: 800px;
+    max-width: 1000px;
     position: relative;
     margin: auto;
+}
+
+#slideshow img {
+    width: 100%;
 }
 
 /* Hide the images by default */
@@ -233,6 +243,11 @@ nav a:hover {
 }
 
 /* Position the "next button" to the right */
+.prev {
+    left: 0;
+    border-radius: 0 3px 3px 0;
+  }
+
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
