--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ table {
 
 :root {
     --brown: #624F41;
+    --dark-brown: #3f332a;
     --orange: #AD560B;
     --tan: #E6EAAE;
     --light-green: #0B5B1E;
@@ -82,21 +83,20 @@ h2 {
     font-family: "Merienda", cursive;
 }
 
+h3 {
+    font-weight: 300;
+    font-size: 1.5rem;
+    font-family: "Merienda", cursive;
+}
+
 p {
     font-weight: 400;
     font-size: 1.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: var(--dark-green);
-        color: white;
-    }
-}
 
 
-
-/* ---- HEADER & NAV ---- */
+/* ---- HEADER ---- */
 header {
     display: flex;
     flex-direction: column;
@@ -104,18 +104,89 @@ header {
     background-color: var(--brown);
     color: var(--tan);
     padding-top: 50px;
+    position: relative;
 }
 
 header h1 {
     padding-bottom: 20px;
 }
 
-#light-mode {
-    position: absolute;
-    top: 0;
-    right: 100px;
+
+
+/* ---- DARK MODE ---- */
+
+/* BUTTON STYLES */
+.lighting-toggle {
+    position: absolute; 
+    top: 10px;
+    right: 10px;
+    z-index: 20;
+    padding: 10px 30px;
+    background-color: var(--light-green);
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    transition: 0.5s ease;
+    color: var(--tan);
 }
 
+.lighting-toggle .slider {
+    position: absolute;
+    background-color: var(--tan);
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    top: 50%;
+    left: 10%;
+    transform: translateY(-50%);
+    transition: 0.5s ease;
+}
+
+.lighting-toggle.active {
+    background-color: var(--dark-green);
+}
+
+.lighting-toggle.active .slider {
+    background-color: var(--orange);
+    transform: translateY(-50%) translateX(85px); 
+}
+
+/* DARK MODE STYLES */
+body.dark-mode {
+    background-color: var(--dark-green);
+    color: var(--tan);
+}
+
+body.dark-mode nav a {
+    background-color: var(--light-green);
+    color: var(--tan);
+}
+
+body.dark-mode nav a:hover {
+    background-color: var(--dark-green);
+}
+
+body.dark-mode #learn {
+    background-color: var(--brown);
+}
+
+body.dark-mode #weather {
+    background-color: var(--brown);
+}
+
+body.dark-mode #weather div {
+    background-color: var(--dark-brown);
+}
+
+body.dark-mode #accordion h3:hover {
+    background-color: var(--light-green);
+}
+
+
+
+/* ---- NAV ---- */
 nav h2 {
     display: none;
 }
@@ -135,12 +206,12 @@ nav a {
     padding: 20px;
     font-weight: 200;
     font-size: 1.5rem;
-    color: white;
     background-color: var(--orange);
+    color: var(--tan);
+    transition: 0.5s ease;
 }
 
 nav a:hover {
-    color: white;
     background-color: var(--light-green);
 }
 
@@ -168,6 +239,9 @@ nav a:hover {
     flex-direction: row;
     justify-content: center;
     text-align: center;
+    background-color: var(--orange);
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #learn img {
@@ -182,6 +256,10 @@ nav a:hover {
     padding: 0 30px;
 }
 
+#learn p {
+    padding: 20px;
+}
+
 
 
 /* ---- GALLERY SECTION ---- */
@@ -190,7 +268,10 @@ nav a:hover {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    padding: 20px 0;
+    padding: 30px 0;
+    position: relative;
+    width: 80%;
+    margin: auto;
 }
 
 #gallery p {
@@ -200,124 +281,44 @@ nav a:hover {
 }
 
 /* ---- JAVASCRIPT: SLIDESHOW ---- */
-
-
-
-
-
-
-
-
-
-
-/* Slideshow container */
 #slideshow {
-    max-width: 1000px;
     position: relative;
-    margin: auto;
-}
-
-#slideshow img {
+    overflow: hidden;
     width: 100%;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
+.mySlides img {
+    width: 100%;
+    display: block;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
 .prev {
-    left: 0;
-    border-radius: 0 3px 3px 0;
-  }
+    position: absolute;
+    top: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 100;
+    left: 10px;
+}
 
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+    position: absolute;
+    top: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 100;
+    right: 10px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+#slider {
+    margin-top: 10px;
 }
-
-/* Number text (1/3 etc) */
-.slide-number {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -328,29 +329,109 @@ nav a:hover {
     justify-content: center;
     text-align: center;
     padding: 20px 0;
+    background-color: var(--orange);
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
-/* ---- JAVASCRIPT: API ---- */
+#weather h2 {
+    padding-bottom: 20px;
+}
+
+#weather p {
+    padding: 20px;
+}
+
+/* ---- STYLES FOR JAVASCRIPT: API RELATED FEATURES ---- */
+#weather div {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 400px;
+    margin: auto;
+    background-color: var(--brown);
+}
+
+#weather button {
+    padding: 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--light-green);
+    color: var(--tan);
+    cursor: pointer;
+}
+
+#weather button:hover {
+    background-color: var(--dark-green);
+}
+
+#weather input {
+    padding: 8px;
+    font-family: 'Assistant', sans-serif;
+    font-size: 1rem;
+}
+
+#weatherResult h3 {
+    padding-bottom: 10px;
+}
+
+#weatherResult p {
+    font-size: 1.25rem;
+    padding: 5px;
+}
 
 
 
-/* ---- FAQ SECTION ---- */
-#faq {
+/* ---- FUN FACTS SECTION ---- */
+#facts {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    padding: 20px 0;
+    padding: 20px 0 30px 0;
 }
 
-/* ---- JAVASCRIPT: ACCORDION ---- */
+#facts h2 {
+    padding-bottom: 30px;
+    padding-top: 20px;
+}
 
+/* ---- STYLES FOR JAVASCRIPT: ACCORDION RELATED FEATURES ---- */
+#accordion {
+    background-color: var(--brown);
+    color: var(--tan);
+    text-align: left;
+    width: 75%;
+    margin: auto;
+}
 
+#accordion h3 {
+    cursor: pointer;
+    padding: 20px;
+    margin: auto;
+    transition: 0.5s ease;
+    text-align: center;
+}
 
-/* ---- CONTACT SECTION ---- */
+#accordion h3:hover {
+    background-color: var(--orange);
+}
 
-/* ---- JAVASCRIPT: WEB STORAGE ---- */
+#accordion p {
+    display: none;
+    padding: 20px;
+    margin: auto;
+    background-color: var(--dark-brown);
+}
+
+#accordion p.active {
+    display: block;
+}
 
 
 
 /* ---- FOOTER ---- */
+footer {
+    background-color: var(--orange);
+    color: var(--tan);
+    padding: 30px;
+}
